[package]
name = "flurx"
version = "0.1.2"
edition = "2021"
authors = ["elm"]
categories = ["asynchronous"]
description = "Create reactive asynchronous data flow"
keywords = ["async"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/not-elm/flurx"


[[example]]
name = "once"
path = "examples/selector/once.rs"

[[example]]
name = "until"
path = "examples/selector/delay.rs"

[[example]]
name = "wait"
path = "examples/selector/wait.rs"

[[example]]
name = "reducer"
path = "examples/store/reducer.rs"

[[example]]
name = "ref_reducer"
path = "examples/store/ref_reducer.rs"

[[example]]
name = "reqwest"
path = "examples/sync/reqwest.rs"


[dependencies]
thiserror = "1.0.57"
async-compat = { version = "0.2.3", optional = true }
pollster = { version = "0.3.0", optional = true }


[dev-dependencies]
futures-lite = "2.2.0"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.11.26"
flurx = {version = "0.1.2", path = ".", features = ["sync"]}


[features]
default = []
sync = ["dep:async-compat", "dep:pollster"]