[package]
name = "flurx"
version = "0.1.6"
edition = "2021"
authors = ["elm"]
categories = []
description = "Create reactive asynchronous data flow"
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/not-elm/flurx"

[dependencies]
async-compat = { version = "0.2.3", optional = true }
pollster = { version = "0.3.0", optional = true }

[dev-dependencies]
futures-lite = "2.2.0"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.12.3"
flurx = { path = ".", features = ["sync"]}

[features]
default = []
sync = ["dep:async-compat", "dep:pollster"]
default-selectors = []
reducer = []